Infra/K8s/amkart-services-identity-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe --file docker-compose.yml convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: amkart-services-identity
  name: amkart-services-identity
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: amkart-services-identity
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe --file docker-compose.yml convert
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/amkart-network: "true"
        io.kompose.service: amkart-services-identity
    spec:
      containers:
        - env:
            - name: ASPNETCORE_ENVIRONMENT
              value: Development
            - name: ASPNETCORE_URLS
              value: http://+:80
          image: ${DOCKER_REGISTRY-}amkartservicesidentity
          name: amkart.services.identity
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always
status: {}
