Infra/K8s/consul-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: consul
  name: consul
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: consul
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/amkart-network: "true"
        io.kompose.service: consul
    spec:
      containers:
        - image: consul
          name: consul
          ports:
            - containerPort: 8500
          resources: {}
          volumeMounts:
            - mountPath: /consul/data
              name: consul
      restartPolicy: Always
      volumes:
        - name: consul
          persistentVolumeClaim:
            claimName: consul
status: {}
