Infra/K8s/fabio-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: fabio
  name: fabio
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: fabio
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/amkart-network: "true"
        io.kompose.service: fabio
    spec:
      containers:
        - env:
            - name: FABIO_REGISTRY_CONSUL_ADDR
              value: consul:8500
          image: fabiolb/fabio
          name: fabio
          ports:
            - containerPort: 9998
            - containerPort: 9999
          resources: {}
      restartPolicy: Always
status: {}
