Infra/K8s/amkart-services-product-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: amkart-services-product
  name: amkart-services-product
spec:
  ports:
    - name: "5001"
      port: 5001
      targetPort: 80
  selector:
    io.kompose.service: amkart-services-product
status:
  loadBalancer: {}
