Infra/K8s/amkart.api.gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe --file docker-compose.yml convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: amkart-api-gateway
  name: amkart.api.gateway
spec:
  ports:
    - name: "5000"
      port: 5000
      targetPort: 80
  selector:
    io.kompose.service: amkart-api-gateway
status:
  loadBalancer: {}
