Infra/K8s/amkart.services.identity-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe --file docker-compose.yml convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: amkart-services-identity
  name: amkart.services.identity
spec:
  ports:
    - name: "5002"
      port: 5002
      targetPort: 80
  selector:
    io.kompose.service: amkart-services-identity
status:
  loadBalancer: {}
