Infra/K8s/amkart.services.order-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe --file docker-compose.yml convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: amkart-services-order
  name: amkart.services.order
spec:
  ports:
    - name: "5005"
      port: 5005
      targetPort: 80
  selector:
    io.kompose.service: amkart-services-order
status:
  loadBalancer: {}
