Infra/K8s/amkart.ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe --file docker-compose.yml convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: amkart-ui
  name: amkart.ui
spec:
  ports:
    - name: "44310"
      port: 44310
      targetPort: 80
  selector:
    io.kompose.service: amkart-ui
status:
  loadBalancer: {}
