Infra/K8s/consul-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe --file docker-compose.yml convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: consul
  name: consul
spec:
  ports:
    - name: "8500"
      port: 8500
      targetPort: 8500
  selector:
    io.kompose.service: consul
status:
  loadBalancer: {}
