Infra/K8s/fabio-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: fabio
  name: fabio
spec:
  ports:
    - name: "9998"
      port: 9998
      targetPort: 9998
    - name: "9999"
      port: 9999
      targetPort: 9999
  selector:
    io.kompose.service: fabio
status:
  loadBalancer: {}
